--- a/src/components/PostSortingFilter/PostSortingFilter.css
+++ b/src/components/PostSortingFilter/PostSortingFilter.css
@@ -6,7 +6,7 @@
   backdrop-filter: blur(5px);
   border-radius: 9999px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  border: 0.5px rgba(128, 128, 128, 0.36) solid;
+  border: 0.5px #8080805c solid;
 }
 
 .toggle-group-item {
