--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @import "@radix-ui/themes/styles.css";
-
-* {
+body {
   background-color: var(--color-gray-900);
 }
 #root {
